Fix menu background on mobile

--- a/home/css/layout.scss
+++ b/home/css/layout.scss
@@ -54,6 +54,7 @@ header {
         flex-shrink: 0;
         flex-direction: column;
         height: 100%;
+        background: $primary-light;
 
         &.menu-collapse {
             position: absolute;
